Use correct `word-wrap` CSS property in `templates/default/bbpress.css`. Fixes problem with long author-names not wrapping correctly.
git-svn-id: https://bbpress.svn.wordpress.org/trunk@5351 9866e705-20ec-0310-96e7-cbb4277adcfb

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -197,7 +197,7 @@ li.bbp-header div.bbp-reply-content span#favorite-toggle {
 #bbpress-forums div.bbp-topic-author a.bbp-author-name,
 #bbpress-forums div.bbp-reply-author a.bbp-author-name {
 	margin: 0 12px;
-	word-break: break-word;
+	word-wrap: break-word;
 	display: inline-block;
 }
 
